--- a/src/main/resources/static/resource/common.css
+++ b/src/main/resources/static/resource/common.css
@@ -4,6 +4,7 @@ html {
 	/* 영문이면 roboto가 적용되고, 한글이면 Noto Sans KR가 적용되도록 아래와 같은 순서로 배치 */
 	font-family: "Roboto", "Noto Sans KR", sans-serif;
 }
+
 /* 노말라이즈 */
 body, ul, li, h1 {
 	margin: 0;
@@ -19,6 +20,7 @@ label[for] {
 	cursor: pointer;
 	user-select: none;
 }
+
 /* 라이브러리 */
 .block {
 	display: block;
@@ -33,6 +35,36 @@ label[for] {
 	margin-right: auto;
 }
 
+.border-red {
+	border: 10px solid red;
+}
+
+html>head+body:nth-child(2) .height-300 {
+	min-height: 100px;
+}
+
+.bg-white {
+	background-color: white;
+}
+
+.padding-10 {
+	padding: 10px;
+}
+
+/* flex 관련 */
+.flex {
+	display: flex;
+}
+
+.flex-ai-c {
+	align-items: center;
+}
+
+.flex-jc-c {
+	justify-content: center;
+}
+
+/* 테이블 관련 */
 .table-box>table {
 	width: 100%;
 	border-collapse: collapse;
@@ -58,8 +90,20 @@ label[for] {
 	resize: none;
 }
 
-html>head+body:last-child .height-300 {
-	min-height: 100px;
+.form1 .form-row {
+	display: flex;
+}
+
+.form1 .form-row>.form-control-label {
+	display: flex;
+	align-items: center;
+	padding: 10px;
+}
+
+.form1 .form-row>.form-control-box {
+	display: flex;
+	align-items: center;
+	padding: 10px;
 }
 
 /* 커스텀 */
